1) Removed Refresh tokens in case this type is unnecessary 2) Added sessions with storing access JWT in Redis 3) Switched logic from tokens to session for client and access token for microservices
