# src/main/java/ru/proba/authentication/controller/InternalController.java
@@ -3,14 +3,15 @@ package ru.proba.authentication.controller;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.proba.authentication.generated.api.InternalAuthApi;
-import ru.proba.authentication.generated.model.Token;
-import ru.proba.authentication.records.UserTokens;
+import ru.proba.authentication.records.UserToken;
 import ru.proba.authentication.service.AuthService;
-import ru.proba.authentication.tokens.JWTRefreshConfig;
+import ru.proba.authentication.service.RedisService;
+import ru.proba.authentication.session.SessionIDConfig;
 
 @RestController
 @FieldDefaults(level = AccessLevel.PRIVATE, makeFinal = true)
@@ -18,21 +19,23 @@ import ru.proba.authentication.tokens.JWTRefreshConfig;
 public class InternalController implements InternalAuthApi {
 
     AuthService service;
-    JWTRefreshConfig config;
+    SessionIDConfig config;
+    RedisService redisService;
 
     @Override
-    public ResponseEntity<Token> updateTokens(String refreshToken) {
-        UserTokens tokens = service.update(refreshToken);
-        ResponseCookie cookie = ResponseCookie.from("refreshToken", tokens.refreshToken())
-                .path("/")
+    public ResponseEntity<Void> updateTokens(String session_id) {
+        UserToken tokens = service.update(session_id);
+        redisService.saveTokens(tokens, session_id);
+        ResponseCookie cookie = ResponseCookie.from("session_id", session_id)
+                .path("/api/")
                 .httpOnly(true)
-                .maxAge(config.getRefreshExpiration()*60L*60*24)
+                .maxAge(config.getExpiration()*60L*60*24)
                 .sameSite("Strict")
                 .secure(true)
                 .build();
         return ResponseEntity
                 .ok()
-                .header("Set-Cookie", cookie.toString())
-                .body(new Token(tokens.accessToken()));
+                .header(HttpHeaders.SET_COOKIE, cookie.toString())
+                .build();
     }
 }
