# src/main/java/ru/proba/authentication/controller/LoginLogoutController.java
@@ -1,18 +1,19 @@
 package ru.proba.authentication.controller;
 
-import com.github.f4b6a3.uuid.UuidCreator;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.ResponseCookie;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.proba.authentication.generated.api.AuthenticationApi;
-import ru.proba.authentication.generated.model.Token;
 import ru.proba.authentication.generated.model.UserLoginDto;
-import ru.proba.authentication.records.UserTokens;
+import ru.proba.authentication.records.UserToken;
 import ru.proba.authentication.service.AuthService;
-import ru.proba.authentication.tokens.JWTRefreshConfig;
+import ru.proba.authentication.service.RedisService;
+import ru.proba.authentication.session.SessionIDConfig;
+import ru.proba.authentication.utils.SessionIDGen;
 
 @RestController
 @RequiredArgsConstructor
@@ -20,30 +21,32 @@ import ru.proba.authentication.tokens.JWTRefreshConfig;
 public class LoginLogoutController implements AuthenticationApi {
 
     AuthService service;
-    JWTRefreshConfig config;
+    SessionIDConfig config;
+    RedisService rs;
 
     @Override
-    public ResponseEntity<Token> login(UserLoginDto body) {
-        String session_id = String.valueOf(UuidCreator.getTimeOrderedEpoch());
-        UserTokens ut = service.createTokens(body, session_id);
-        ResponseCookie rc = ResponseCookie.from("refreshToken", ut.refreshToken())
+    public ResponseEntity<Void> login(UserLoginDto body) {
+        String session_id = SessionIDGen.generateSessionId();
+        UserToken ut = service.createToken(body);
+        rs.saveTokens(ut,session_id);
+        ResponseCookie rc = ResponseCookie.from("session_id", session_id)
                 .httpOnly(true)
                 .secure(true)
                 .sameSite("strict")
-                .path("/")
-                .maxAge(60L * 60 * 24 * config.getRefreshExpiration())
+                .path("/api/")
+                .maxAge(config.getExpiration()*60L*60*24)
                 .build();
         return ResponseEntity
                 .ok()
 //                .header("Access-Control-Allow-Credentials", "true")
                 //include when frontend is ready
-                .header("Set-Cookie", rc.toString())
-                .body(new Token(ut.accessToken()));
+                .header(HttpHeaders.SET_COOKIE, rc.toString())
+                .build();
     }
 
     @Override
-    public ResponseEntity<Void> logoutUser(String refreshToken, Token accessToken) {
-        service.logout(refreshToken, accessToken);
-        return ResponseEntity.accepted().build();
+    public ResponseEntity<Void> logoutUser(String session_id) {
+        service.logout(session_id);
+        return ResponseEntity.ok().build();
     }
 }
