# src/main/java/ru/proba/authentication/controller/PasswordController.java
@@ -6,8 +6,9 @@ import lombok.experimental.FieldDefaults;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 import ru.proba.authentication.generated.api.PasswordApi;
-import ru.proba.authentication.generated.model.CodeAndPasswordDto;
-import ru.proba.authentication.generated.model.ResetEmailDto;
+import ru.proba.authentication.generated.model.CodeAndEmailDto;
+import ru.proba.authentication.generated.model.EmailDto;
+import ru.proba.authentication.generated.model.NewPasswordDto;
 import ru.proba.authentication.service.PasswordService;
 
 @RestController
@@ -18,14 +19,21 @@ public class PasswordController implements PasswordApi {
     PasswordService service;
 
     @Override
-    public ResponseEntity<Void> clearPassword(ResetEmailDto body) {
+    public ResponseEntity<Void> clearPassword(EmailDto body) {
         service.generateCode(body);
         return ResponseEntity.ok().build();
     }
 
     @Override
-    public ResponseEntity<Void> changePassword(CodeAndPasswordDto body) {
-
+    public ResponseEntity<Void> verifyEmail(CodeAndEmailDto body) {
+        service.verify(body);
         return ResponseEntity.ok().build();
     }
+
+    @Override
+    public ResponseEntity<Void> changePassword(NewPasswordDto body) {
+        service.changePassword(body);
+        return ResponseEntity.ok().build();
+    }
+
 }
